# polyglot

./: .gitignore  .gitmodules  .vimrc  CMakeLists.txt  LICENSE  Makefile  README.md  config.h  tags
.vim/: app_debug  boot_debug
application/: CMakeLists.txt  main.c
cmake/: arm.cmake  tools.cmake
firmware/: CMakeLists.txt
firmware/abstraction/aes/: aes.c  aes.h
firmware/abstraction/hold/: hold.c  hold.h
firmware/abstraction/init/: init.c  init.h
firmware/abstraction/jump/: jump.c  jump.h
firmware/abstraction/led/: led.c  led.h
firmware/abstraction/nvm/: nvm.c  nvm.h
firmware/abstraction/serial/: serial.c  serial.h
firmware/abstraction/sha/: sha256.c  sha256.h
firmware/abstraction/systick/: systick.c  systick.h
firmware/abstraction/verify/: verify.c  verify.h
firmware/abstraction/wdt/: wdt.c  wdt.h
firmware/config/: config.h
firmware/docs/: bootloader_flow.drawio  commands.drawio
firmware/docs/architecture/: sw_arch.drawio
firmware/interface/buffer/: buffer.c  buffer.h
firmware/interface/command/: command.c  command.h
firmware/interface/data/: data.c  data.h
firmware/interface/loader/: loader.c  loader.h
firmware/interface/table/: table.c  table.h
firmware/interface/updater/: updater.c  updater.h
firmware/interface/validator/: validator.c  validator.h
firmware/interface/writer/: writer.c  writer.h
firmware/lib/crc/: crc32.c  crc32.h
firmware/lib/dict/: dict.h
firmware/lib/helper/: helper.c  helper.h
firmware/lib/schedule/: schedule.c  schedule.h
firmware/main/: main.c
firmware/main/run/: run.c
firmware/task/blink/: blink.c  blink.h
firmware/task/main/run/: run.h
firmware/task/timeout/: timeout.c  timeout.h
firmware/task/update/: update.c  update.h
firmware/test/: Dockerfile  Makefile  config.h  project.yml  run.sh
firmware/test/abstraction/: test_jump.c
firmware/test/fake/: fake_nvm.c  fake_nvm.h
firmware/test/interface/: test_table.c  test_writer.c
firmware/test/src/: randomizer.c  randomizer.h
keys/: hex_keys.txt  make_keys.sh  private.pem  public.pem  test.txt  test.txt.sign
scripts/: debug.py  flash.py
shared/: CMakeLists.txt
shared/chip/: CMakeLists.txt
shared/chip/GD25Q80C/: GD25Q80C.c  GD25Q80C.h
shared/chip/NAU88C10/: NAU88C10.c  NAU88C10.h  NAU88C10_Config.h
shared/drivers/: CMakeLists.txt
shared/drivers/atomic/: atomic.h
shared/drivers/clock/: clock.h
shared/drivers/cpu/: cpu.h
shared/drivers/crypto/: crypto.h
shared/drivers/delay/: delay.h
shared/drivers/dma/: dma.h
shared/drivers/flash/: flash.h
shared/drivers/gpio/: gpio.h
shared/drivers/i2c/: i2c.h
shared/drivers/i2s/: i2s.h
shared/drivers/spi/: spi.h
shared/drivers/timer/: timer.h
shared/drivers/uart/: uart.h
shared/drivers/watchdog/: watchdog.h
shared/interface/: CMakeLists.txt
shared/interface/bootloader/: bootloader.c  bootloader.h
shared/interface/ext_flash/: ext_flash.c  ext_flash.h
shared/interface/partition/: partition.c  partition.h
shared/interface/time/: time.c  time.h
shared/lib/: CMakeLists.txt
shared/lib/config/: mbedtls_config.h
shared/platform/: CMakeLists.txt  platform.h
shared/platform/efm32/: efm32.cmake  platform_specific.h  startup_efm32tg11b.S
shared/platform/efm32/drivers/atomic/: atomic.c
shared/platform/efm32/drivers/clock/: clock.c
shared/platform/efm32/drivers/cpu/: cpu.c
shared/platform/efm32/drivers/crypto/: crypto.c
shared/platform/efm32/drivers/delay/: delay.c
shared/platform/efm32/drivers/dma/: dma.c
shared/platform/efm32/drivers/flash/: flash.c
shared/platform/efm32/drivers/gpio/: gpio.c
shared/platform/efm32/drivers/i2c/: i2c.c
shared/platform/efm32/drivers/i2s/: i2s.c
shared/platform/efm32/drivers/spi/: spi.c
shared/platform/efm32/drivers/timer/: timer.c
shared/platform/efm32/drivers/uart/: uart.c
shared/platform/efm32/drivers/watchdog/: watchdog.c
shared/platform/efm32/toolchain/: efm32tg11b_app.ld  efm32tg11b_boot.ld
software/: .vscode-ctags  CMakeLists.txt  Makefile  main.cpp
software/abstraction/: CMakeLists.txt
software/abstraction/bootloader/: bootloader.cpp  bootloader.h
software/bootloader/: CMakeLists.txt
software/bootloader/interface/command/: command.cpp  command.h
software/bootloader/interface/data/: data.cpp  data.h
software/bootloader/interface/serial/: serial.cpp  serial.h
software/bootloader/lib/crc/: crc32.cpp  crc32.h
software/bootloader/lib/dict/: dict.h
software/bootloader/utility/: common.h
software/cmake/: linux.cmake
software/lib/CP2110/: CMakeLists.txt  Makefile  cmake_install.cmake
software/lib/CP2110/cp2110smt/: Makefile  SLAB_USB_SPI.h  Types.h  cp2110smt.cpp  smt.cpp  smt.h  util.cpp  util.h
software/lib/CP2110/include/: SLABHIDtoUART.h
software/utility/: CMakeLists.txt  utility.h
software/utility/terminal/: terminal.cpp  terminal.h
